# A-quant-trade-local

./: README.md  pyproject.toml
configs/: backtest.yaml  base.yaml  paper_trade.yaml
configs/strategies/: ma_cross.yaml  momentum.yaml
data/db/: market.duckdb
data/warehouse/: 000001.SZ.parquet
engine/: __init__.py
engine/analytics/: __init__.py  metrics.py
engine/datafeed/: __init__.py  akshare_adapter.py  baostock_adapter.py  duckdb_store.py  query.py  schema.py  storage.py  update.py
engine/execution/: __init__.py  costs.py  simulator.py
engine/portfolio/: __init__.py  sizer.py
engine/risk/: __init__.py  rules.py
engine/runner/: __init__.py  run_backtest.py  run_paper_trade.py
engine/strategy/: __init__.py  base.py  bundle.py  ma_cross.py  momentum.py
quant_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/backtest/: equity_curve.csv  summary.csv
reports/paper_trade/: orders.csv
scripts/: daily_update.py  init_data.py  query_bars.py
tests/: __init__.py  test_imports.py  test_smoke.py
tests/datafeed/: test_adapters.py  test_query.py  test_storage.py  test_update.py
tests/execution/: test_simulator.py
tests/portfolio/: test_sizer.py
tests/runner/: test_backtest_runner.py  test_paper_trade_runner.py
tests/strategy/: test_ma_cross.py  test_momentum.py  test_strategy_bundle.py
